# SheetsCrew

./: .gitignore  Llama3modfile  Modelfile  agents.py  crew.py  file_io.py  main.py  pyproject.toml  sheetcrewtest.py  tasks.py
config/: agents.yaml  tasks.yaml
tools/: __init__.py  google_sheeets_tool.py  search_tool.py  search_tools.py  sheet_categorizer.py  sheet_tool.py  sheets_read.py  sheets_write.py  tool.py
